--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,3 +23,9 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Push the Docker image
       run: docker push mentoringkc/applialacon:latest
+    - name: Connect to EC2
+      run: |
+        echo "${{ secrets.EC2_PEM_KEY }}" | tr -d '\r' > key.pem
+        chmod 400 key.pem
+        ssh -i key.pem ${{ vars.EC2_USER }}@${{ vars.EC2_HOSTNAME }} "cd /opt/alacon && docker compose down && docker compose pull && docker compose up -d"
+    
