--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,6 +23,12 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Push the Docker image
       run: docker push mentoringkc/applialacon:latest
+      
+  deploy:
+  
+    runs-on: ubuntu-latest
+
+    steps:
     - name: Connect to EC2
       run: |
         echo "${{ secrets.EC2_PEM_KEY }}" | tr -d '\r' > key.pem
