--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
     - name: Connect to EC2
       run: |
-        echo "${{ secrets.EC2_PEM_KEY }}" | tr -d '\r' > key.pem
+        echo ${{ secrets.EC2_PEM_KEY }} > key.pem
         chmod 400 key.pem
         ssh -i key.pem ${{ vars.EC2_USER }}@${{ vars.EC2_HOSTNAME }} "cd /opt/alacon && docker compose down && docker compose pull && docker compose up -d"
     
