--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,7 +34,7 @@ jobs:
       env:
         PRIVATE_KEY: ${{ secrets.EC2_PEM_KEY }}
       run: |
-        echo $PRIVATE_KEY > key.pem
+        echo $PRIVATE_KEY | tr -d '\r' > key.pem
         chmod 400 key.pem
         ssh -o StrictHostKeyChecking=no -i key.pem ${{ vars.EC2_USER }}@${{ vars.EC2_HOSTNAME }} "cd /opt/alacon && docker compose down && docker compose pull && docker compose up -d"
     
